hacked!! App width to fix overflow

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  width: 900px;
   max-width: 100vw;
   margin: auto;
   padding: 10px;
@@ -10,4 +9,10 @@
 }
 .mgt-global-20 {
   padding-top: 8vh;
+}
+@media (min-width:920px){
+  .App{
+    width: 900px;
+  }
+
 }
